--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   --font-size-small: 70%;
   --bingo-blue: #1b2c98;
   --bingo-red: #fa3934;
-  --bingo-grey: #cccccc;
+  --bingo-grey: #aaaaaa;
   --bingo-green: #1a5e47;
   --bingo-orange: #fd9e28;
 }
@@ -44,25 +44,9 @@ button.disabled {
   height: 100vh;
 }
 
-.App,
-.Debug {
+.App > div:first-child {
   display: flex;
   justify-content: center;
-  flex-direction: row;
-}
-
-.App > div {
-  text-align: center;
-  display: flex;
-  flex: 1;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
-}
-
-.Host {
-  background-color: var(--color-light-alt);
-  border-right: var(--border-width-bold) solid var(--color-dark);
 }
 
 .Debug.disabled {
