--- a/packages/client/src/Views/Host/style.css
+++ b/packages/client/src/Views/Host/style.css
@@ -1,3 +1,8 @@
 .app-buttons .toggle-button {
   min-width: var(--spacing-2x * 5);
 }
+
+.ball-wrapper {
+  display: flex;
+  align-items: baseline;
+}
