--- a/packages/client/src/Components/Cell/style.css
+++ b/packages/client/src/Components/Cell/style.css
@@ -1,15 +1,14 @@
 .grid-item {
   font-weight: bold;
   font-size: var(--font-size-h3);
-  line-height: calc(var(--grid-item) + var(--border-width));
   height: var(--grid-item);
+  line-height: var(--grid-item);
   text-align: center;
   vertical-align: middle;
   text-transform: uppercase;
   color: var(--color-dark);
   background-color: var(--color-light);
-  border-top: var(--border-width-light) solid var(--color-dark);
-  border-left: var(--border-width-light) solid var(--color-dark);
+  border: var(--border-width-light) solid var(--color-dark);
   cursor: pointer;
   position: relative;
   overflow: hidden;
