Refactor Logo for Storybook

--- a/packages/client/src/Components/Logo/style.css
+++ b/packages/client/src/Components/Logo/style.css
@@ -27,6 +27,7 @@ div.grid-header {
   height: var(--ball-size-sm);
   width: var(--ball-size-sm);
   border-radius: 50%;
+  text-align: center;
 }
 
 .grid-header.logo .grid-header-item > div {
