--- a/packages/client/src/Components/Logo/style.css
+++ b/packages/client/src/Components/Logo/style.css
@@ -1,28 +1,20 @@
-div.grid-header {
+div.logo {
   font-weight: bold;
   text-transform: uppercase;
-  grid-column-start: 1;
-  grid-column-end: 6;
   color: var(--color-light);
   font-size: var(--font-size-h2);
   line-height: 1;
   height: calc(var(--ball-size-sm) + var(--spacing));
-  border-bottom: var(--border-width-bold) solid var(--color-dark);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
-.grid.winner div.grid-header {
-  border-bottom-color: var(--color-success-dark);
-}
-
-.grid-header.logo {
-  border-bottom: 0;
+.logo.home {
   font-size: var(--font-size-h1);
 }
 
-.grid-header-item > div {
+.logo-item > div {
   line-height: var(--ball-size-sm);
   height: var(--ball-size-sm);
   width: var(--ball-size-sm);
@@ -30,33 +22,33 @@ div.grid-header {
   text-align: center;
 }
 
-.grid-header.logo .grid-header-item > div {
+.logo.home .logo-item > div {
   line-height: var(--ball-size-lrg);
   height: var(--ball-size-lrg);
   width: var(--ball-size-lrg);
 }
 
-.grid-header-item-1 > div {
+.logo-item-1 > div {
   background-color: var(--bingo-blue);
 }
 
-.grid-header-item-2 > div {
+.logo-item-2 > div {
   background-color: var(--bingo-red);
 }
 
-.grid-header-item-3 > div {
+.logo-item-3 > div {
   background-color: var(--bingo-grey);
 }
 
-.grid-header-item-4 > div {
+.logo-item-4 > div {
   background-color: var(--bingo-green);
 }
 
-.grid-header-item-5 > div {
+.logo-item-5 > div {
   background-color: var(--bingo-orange);
 }
 
-.grid-header-item.winner > div {
+.logo-item.winner > div {
   background-color: var(--color-success);
   border-color: var(--color-success-dark);
 }
