--- a/packages/client/src/Views/Host/style.css
+++ b/packages/client/src/Views/Host/style.css
@@ -1,8 +1,13 @@
+.app-buttons {
+  margin: var(--spacing-2x);
+}
+
 .app-buttons .toggle-button {
   min-width: var(--spacing-2x * 5);
 }
 
 .ball-wrapper {
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  margin: var(--spacing);
 }
