--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -2,7 +2,6 @@
   height: 100vh;
   width: 56.25vh;
   margin: 0 auto;
-  background-color: var(--color-disabled);
 } */
 
 body {
@@ -14,19 +13,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+code,
+.monospace {
   font-family: 'Roboto Mono', source-code-pro, Menlo, Monaco, Consolas,
     'Courier New', monospace;
 }
 
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-ul > li {
-  padding: var(--spacing-half);
+header {
+  text-align: center;
 }
 
 :root {
