--- a/packages/client/src/Components/Cell/style.css
+++ b/packages/client/src/Components/Cell/style.css
@@ -2,6 +2,7 @@
   font-weight: bold;
   font-size: var(--font-size-h3);
   height: var(--grid-item);
+  min-width: calc(var(--spacing-2x) * 3);
   line-height: var(--grid-item);
   text-align: center;
   vertical-align: middle;
@@ -24,6 +25,7 @@
   left: 0;
   top: 0;
   color: var(--color-alert);
+  line-height: 0.4;
 }
 
 .checked.winner::before {
