--- a/packages/client/src/App.css
+++ b/packages/client/src/App.css
@@ -5,20 +5,25 @@
 
 .App > div:not(.background) {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.App > div > * {
+  display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+}
+
+.App > div > header,
+.App > div > footer {
+  margin: calc(var(--spacing-2x) * 1.5) 0;
+}
+
+.App > div > .main {
+  flex: 1;
 }
 
 .App > div > .main > * {
   margin: var(--spacing);
-}
-
-.main {
-  width: 100%;
-  height: 65vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
