--- a/packages/client/src/Components/Draws/style.css
+++ b/packages/client/src/Components/Draws/style.css
@@ -4,6 +4,7 @@
   border-radius: var(--spacing);
   min-width: var(--draws-w);
   min-height: var(--draws-h);
+  background-color: var(--color-light);
 }
 
 .draws > ul {
@@ -37,7 +38,7 @@
   margin: 0;
   height: var(--spacing-2x);
   border-bottom: var(--border-width-light) solid var(--color-disabled);
-  padding: var(--spacing-half);
+  padding: calc(var(--spacing-half) / 2);
 }
 
 .draws > ul > li:nth-child(15) {
