--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -51,8 +51,9 @@ header {
   --draws-h: 25rem; /* ~ 400px */
   --draws-w: 13.75rem; /* ~ 200px */
   --grid: 20rem; /* ~ 320px */
-  --grid-item: 3.25rem; /* ~ 52px */
-  --crossmark: 6rem; /* ~96px */
+  --grid-item-w: 4rem; /* ~ 64px */
+  --grid-item-h: 3.5rem; /* ~ 54px */
+  --crossmark: 6.875rem; /* ~110px */
   --font-size-h1: 2rem; /* ~ 32px */
   --font-size-h2: 1.5rem; /* ~ 24px */
   --font-size-h3: 1.17rem; /* ~ 18.72px */
