--- a/packages/client/src/Views/Host/style.css
+++ b/packages/client/src/Views/Host/style.css
@@ -2,10 +2,6 @@
   justify-content: flex-start;
 }
 
-.app-buttons {
-  margin: var(--spacing-2x);
-}
-
 .app-buttons .toggle-button {
   min-width: var(--spacing-2x * 5);
 }
@@ -13,5 +9,5 @@
 .ball-wrapper {
   display: flex;
   align-items: center;
-  margin: var(--spacing);
+  /* margin: var(--spacing); */
 }
