--- a/packages/client/src/Components/Board/style.css
+++ b/packages/client/src/Components/Board/style.css
@@ -39,6 +39,10 @@
   border-bottom: var(--border-width-light) solid var(--color-dark);
 }
 
+.grid-item.grid-item-13 {
+  font-size: var(--font-size-h3);
+}
+
 .grid > .serial {
   font-size: var(--font-size-xs);
   color: var(--color-light);
