--- a/packages/client/src/Views/Play/style.css
+++ b/packages/client/src/Views/Play/style.css
@@ -1,15 +1,10 @@
-.app-buttons {
-  margin: var(--spacing-2x);
+.Play .app-buttons > button:first-child {
+  margin-right: var(--spacing);
 }
-
 .main.even {
   justify-content: space-evenly;
 }
 
 .ready > span {
   min-width: calc(var(--spacing-2x) * 3);
-}
-
-.ball-wrapper {
-  margin: var(--spacing);
 }
