--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -1,78 +1,46 @@
-/* html {
-  height: 100vh;
-  width: 56.25vh;
-  margin: 0 auto;
-} */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-body {
-  margin: 0;
-  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code,
-.monospace {
-  font-family: 'Roboto Mono', source-code-pro, Menlo, Monaco, Consolas,
-    'Courier New', monospace;
-}
-
-header {
-  text-align: center;
-}
-
-:root {
-  --color-light: #ffffff;
-  --color-light-alt: #eeeeee;
-  --color-dark: #242833;
-  --color-primary: #1e3954;
-  --color-success: #028302;
-  --color-success-dark: #005c00;
-  --color-alert: #e00101;
-  --color-disabled: #cccccc;
-  --font-size-small: 70%;
-  --bingo-blue: #1b2c98;
-  --bingo-red: #fa3934;
-  --bingo-grey: #aaaaaa;
-  --bingo-green: #1a5e47;
-  --bingo-orange: #fd9e28;
-  --border-width-extra-light: 0.0625rem; /* ~ 1px */
-  --border-width-light: 0.125rem; /* ~ 2px */
-  --border-width: 0.1875rem; /* ~ 3px */
-  --border-width-bold: 0.3125rem; /* ~ 5px */
-  --spacing-half: 0.3125rem; /* ~ 5px */
-  --spacing: 0.625rem; /* ~ 10px */
-  --spacing-2x: 1.25rem; /* ~ 20px */
-  --ball-size-sm: 3.4375rem; /* ~ 55px */
-  --ball-size: 3.75rem; /* ~ 60px */
-  --ball-size-lrg: 4.6875rem; /* ~ 75px */
-  --draws-h: 25rem; /* ~ 400px */
-  --draws-w: 13.75rem; /* ~ 200px */
-  --grid-item-w: 3.75rem; /* ~ 60px */
-  --grid-item-h: 3.25rem; /* ~ 52px */
-  --crossmark: 6.625rem; /* ~106px */
-  --crossmark-line-height: 2.5rem; /* ~40px */
-  --font-size-h1: 2rem; /* ~ 32px */
-  --font-size-h2: 1.5rem; /* ~ 24px */
-  --font-size-h3: 1.17rem; /* ~ 18.72px */
-  --font-size-h4: 1rem; /* ~ 16px */
-  --font-size-h5: 0.83rem; /* ~ 13.28px */
-  --font-size-h6: 0.67rem; /* ~ 10.72px */
-  --font-size-xs: 0.4375rem; /* ~ 7px */
-}
-
-.hidden {
-  opacity: 0;
-  visibility: hidden;
-}
-
-.shadow {
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
-    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
-}
-
-.align-left {
-  text-align: left;
+@layer utilities {
+  .text-xxs {
+    font-size: 7px;
+  }
+  .border-br {
+    border-width: 0 1px 1px 0;
+  }
+  @variants dark {
+    .ripple-lighter > .ripple,
+    .ripple-darker > .ripple {
+      background-position: center;
+      transition: background 0.5s;
+      background-size: 100%;
+    }
+    .ripple-lighter:active > .ripple,
+    .ripple-darker:active > .ripple {
+      background-image: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0.15) 1%,
+        transparent 1.5%
+      );
+      background-size: 10000%;
+    }
+  }
+  @variants disabled {
+    .ripple-none {
+      transition: none;
+    }
+    .ripple-none:active > .ripple {
+      background-image: none;
+      background-size: initial;
+    }
+  }
+  @variants hover {
+    .tooltip:hover > .tooltip-t,
+    .tooltip:hover > .tooltip-r,
+    .tooltip:hover > .tooltip-d,
+    .tooltip:hover > .tooltip-l {
+      opacity: 100%;
+    }
+  }
 }
