--- a/packages/client/src/Components/Logo/style.css
+++ b/packages/client/src/Components/Logo/style.css
@@ -1,58 +1,23 @@
-div.logo {
-  font-weight: bold;
-  text-transform: uppercase;
-  color: var(--color-light);
-  font-size: var(--font-size-h1);
-  line-height: 1;
-  height: calc(var(--ball-size) + var(--spacing));
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+.logo-item-1 {
+  @apply bg-blue-bingo dark:bg-blue-300;
 }
 
-.logo-item > div {
-  line-height: var(--ball-size);
-  height: var(--ball-size);
-  width: var(--ball-size);
-  border-radius: 50%;
-  text-align: center;
+.logo-item-2 {
+  @apply bg-red-bingo dark:bg-red-300;
 }
 
-.logo.home .logo-item {
-  margin-left: -10px;
+.logo-item-3 {
+  @apply bg-gray-400 dark:bg-gray-300;
 }
 
-.logo.home .logo-item:first-child {
-  margin-left: 0;
+.logo-item-4 {
+  @apply bg-green-bingo dark:bg-green-300;
 }
 
-.logo.home .logo-item > div {
-  line-height: var(--ball-size-lrg);
-  height: var(--ball-size-lrg);
-  width: var(--ball-size-lrg);
+.logo-item-5 {
+  @apply bg-orange-bingo dark:bg-orange-300;
 }
 
-.logo-item-1 > div {
-  background-color: var(--bingo-blue);
-}
-
-.logo-item-2 > div {
-  background-color: var(--bingo-red);
-}
-
-.logo-item-3 > div {
-  background-color: var(--bingo-grey);
-}
-
-.logo-item-4 > div {
-  background-color: var(--bingo-green);
-}
-
-.logo-item-5 > div {
-  background-color: var(--bingo-orange);
-}
-
-.logo-item.winner > div {
-  background-color: var(--color-success);
-  border-color: var(--color-success-dark);
+.logo-item.winner {
+  @apply bg-green-700 dark:bg-green-600;
 }
