--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -6,8 +6,8 @@
   .text-xxs {
     font-size: 7px;
   }
-  .border-br {
-    border-width: 0 1px 1px 0;
+  .border-bl {
+    border-width: 0 0 1px 1px;
   }
   @variants dark {
     .ripple-lighter > .ripple,
@@ -41,6 +41,7 @@
     .tooltip:hover > .tooltip-d,
     .tooltip:hover > .tooltip-l {
       opacity: 100%;
+      visibility: visible;
     }
   }
 }
