--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -4,13 +4,13 @@
 
 @layer base {
   header {
-    @apply flex justify-center z-10 p-4;
+    @apply flex justify-center z-10 px-3 py-4 mt-[30px];
   }
   main {
-    @apply flex flex-1 flex-col items-center z-10 px-4 py-1 gap-y-4;
+    @apply flex flex-1 flex-col items-center z-10 px-3 py-1 gap-y-4;
   }
   footer {
-    @apply flex flex-col items-center z-10 p-4;
+    @apply flex flex-col items-center z-10 px-3 py-4;
   }
 }
 
